--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,5 @@
-
-#conexion a jdbc
-
-spring.datasource.url=jdbc:mysql://localhost:3306/todolistspring?serverTimezone=UTC
-
-#Usuario
-
-spring.datasource.username=root
-
-#contraseña
-
-spring.datasource.password=123456789
-
-#drive de mysql
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#conexion con hibernate
-
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
